crates/kermlc/tests/fixtures/valid/simple_package.kerml
package Vehicles {
    type Vehicle {}
    type Car :> Vehicle {
        feature wheels : Vehicle [4];
    }
}
