crates/kermlc/tests/fixtures/invalid/missing_brace.kerml
package P {
    type A {
        feature x : A;

